--- a/emissions_calculator/model.ipynb
+++ b/emissions_calculator/model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 264,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\hemph\\Downloads\\Python3\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +150,7 @@
        "9          34  Forum Novelties Union Officer Child's Costume,...         2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,27 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2173, 2732, 2754, 678]"
+       "[1210, 2991, 1688, 678]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab(['here', '41', 'an', 'bamboo'])"
+    "vocab(['jacket', 'sweater', 'napkin', 'bamboo'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +262,10 @@
     "    def __init__(self, vocab_size, embed_dim, num_class):\n",
     "        super(TextClassificationModel, self).__init__()\n",
     "        self.embedding = nn.EmbeddingBag(vocab_size, embed_dim, sparse=True)\n",
-    "        self.fc = nn.Linear(embed_dim, num_class)\n",
+    "        self.fc = nn.Linear(embed_dim, 50)\n",
+    "        self.activation = torch.nn.ReLU()\n",
+    "        self.sl = nn.Linear(50, num_class)\n",
+    "        self.softmax = torch.nn.Softmax(dim = 1)\n",
     "        self.init_weights()\n",
     "\n",
     "    def init_weights(self):\n",
@@ -282,12 +276,16 @@
     "\n",
     "    def forward(self, text, offsets):\n",
     "        embedded = self.embedding(text, offsets)\n",
-    "        return self.fc(embedded)"
+    "        x = self.fc(embedded)\n",
+    "        x = self.activation(x)\n",
+    "        x = self.sl(x)\n",
+    "        x = self.softmax(x)\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -363,34 +361,34 @@
      "output_type": "stream",
      "text": [
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  1.88s | valid accuracy    0.454 \n",
+      "| end of epoch   1 | time:  1.22s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  1.37s | valid accuracy    0.530 \n",
+      "| end of epoch   2 | time:  1.35s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  1.66s | valid accuracy    0.572 \n",
+      "| end of epoch   3 | time:  1.33s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   4 | time:  1.65s | valid accuracy    0.608 \n",
+      "| end of epoch   4 | time:  1.22s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   5 | time:  1.42s | valid accuracy    0.646 \n",
+      "| end of epoch   5 | time:  1.15s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   6 | time:  1.35s | valid accuracy    0.648 \n",
+      "| end of epoch   6 | time:  0.99s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   7 | time:  1.35s | valid accuracy    0.660 \n",
+      "| end of epoch   7 | time:  1.06s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   8 | time:  1.07s | valid accuracy    0.676 \n",
+      "| end of epoch   8 | time:  1.39s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   9 | time:  1.15s | valid accuracy    0.684 \n",
+      "| end of epoch   9 | time:  1.22s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch  10 | time:  1.24s | valid accuracy    0.690 \n",
+      "| end of epoch  10 | time:  1.20s | valid accuracy    0.230 \n",
       "-----------------------------------------------------------\n"
      ]
     }
@@ -400,7 +398,7 @@
     "from torchtext.data.functional import to_map_style_dataset\n",
     "# Hyperparameters\n",
     "EPOCHS = 10 # epoch\n",
-    "LR = 5  # learning rate\n",
+    "LR =  0.1 # learning rate\n",
     "BATCH_SIZE = 64 # batch size for training\n",
     "\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
@@ -432,15 +430,13 @@
     "       total_accu = accu_val\n",
     "    print('-' * 59)\n",
     "    print('| end of epoch {:3d} | time: {:5.2f}s | '\n",
-    "          'valid accuracy {:8.3f} '.format(epoch,\n",
-    "                                           time.time() - epoch_start_time,\n",
-    "                                           accu_val))\n",
+    "          'valid accuracy {:8.3f} '.format(epoch, time.time() - epoch_start_time, accu_val))\n",
     "    print('-' * 59)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +444,15 @@
      "output_type": "stream",
      "text": [
       "Checking the results of test dataset.\n",
-      "test accuracy    0.682\n"
+      "test accuracy    0.310\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hemph\\AppData\\Local\\Temp\\ipykernel_384\\4169281971.py:25: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  x = self.softmax(x)\n"
      ]
     }
    ],
